@@ -2,6 +2,7 @@ package com.a301.newsseug.domain.auth.model.entity;
 
 import com.a301.newsseug.domain.member.model.entity.Member;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import lombok.AccessLevel;
@@ -29,7 +30,7 @@ public class CustomOAuth2UserDetails implements OAuth2User {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(
+        return Collections.singletonList(
                 (GrantedAuthority) () -> member.getOAuth2Details().getRole().name()
         );
     }
